# balucki_fajter

./: CMakeKarolina-działa.txt  CMakeLists.txt
Sprites/: HP_bar.aseprite
Sprites/Backgrounds/: Office_scene.aseprite
Sprites/Fighters/: frajer_fajter.aseprite
debugFunctions/: runWithPhoto.cpp  runWithPhoto.hpp
src/: ActionSprite.cpp  ActionSprite.h  ActionSprite.hpp  Background.cpp  Background.h  Background.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Enemy.cpp  Enemy.hpp  EnemyHpBar.cpp  EnemyHpBar.hpp  GameLoop.cpp  GameLoop.hpp  Glove.cpp  Glove.h  Glove.hpp  HpBar.cpp  HpBar.h  HpBar.hpp  PlayAgain.cpp  PlayAgain.hpp  Player.hpp  PlayerHpBar.cpp  PlayerHpBar.hpp  RuszanieRekawica.cpp  Shield.cpp  Shield.hpp  main.cpp
